--- a/src/components/common/Credits/styles.scss
+++ b/src/components/common/Credits/styles.scss
@@ -1,3 +1,3 @@
 [data-cid="credits"] {
-  @apply mx-auto text-xs w-fit text-gray-400 font-normal mt-16 mb-5;
+  @apply mx-auto text-xs font-light w-fit text-gray-400 mt-16 mb-5;
 }
