feat: added social links

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,7 @@
 
 @import '../components/common/Profile/styles.scss';
 @import '../components/common/Credits/styles.scss';
+@import '../components/common/SocialLinks/styles.scss';
 
 @import '../components/ui/Button/styles.scss';
 
