--- a/src/components/common/Profile/styles.scss
+++ b/src/components/common/Profile/styles.scss
@@ -4,7 +4,7 @@
 
 .profile {
   &-image {
-    @apply w-40 h-40 rounded-full overflow-hidden;
+    @apply w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden;
   
     img {
       @apply w-full h-full object-cover;
