--- a/src/components/ui/Button/styles.scss
+++ b/src/components/ui/Button/styles.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply flex justify-center items-center w-full px-6 py-3.5 rounded-xl text-black-dark text-base font-semibold bg-white hover:bg-black-dark hover:text-white duration-default shadow-md shadow-gray-200;
+  @apply flex justify-center items-center w-full px-6 py-3.5 rounded-md text-black-dark text-base bg-white hover:bg-black-dark hover:text-white duration-default;
 
   &-icon {
     @apply w-6 h-6 mr-2;
