--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,13 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@import '../app/(home)/styles.scss';
+@import "../app/(home)/styles.scss";
 
-@import '../components/common/Profile/styles.scss';
-@import '../components/common/Credits/styles.scss';
-@import '../components/common/SocialLinks/styles.scss';
+@import "../components/common/Profile/styles.scss";
+@import "../components/common/Credits/styles.scss";
 
-@import '../components/ui/Button/styles.scss';
+@import "../components/ui/Button/styles.scss";
 
 body {
   @apply bg-black-lightest;
